// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavBar Component Should render along with children componenet 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <NavBar>
      <nav
        className="flex items-center justify-between flex-wrap bg-white-500 pt-2 p-3 z-40 shadow-md"
      >
        <div
          className="flex items-center flex-shrink-0 text-dark mr-6"
        >
          <Link
            to="/"
          >
            <a
              href="/"
              onClick={[Function]}
            >
              <img
                alt="Author's Haven"
                className="w-3/12"
                id="logo"
                src="test-file-stub"
              />
            </a>
          </Link>
        </div>
        <div
          className=""
        >
          <Link
            to="/signup"
          >
            <a
              href="/signup"
              onClick={[Function]}
            >
              <Button
                classes="btn-purple w-32 hidden md:inline"
                name="Sign Up"
                type="button"
              >
                <button
                  className="btn btn-purple w-32 hidden md:inline"
                  disabled={false}
                  type="button"
                >
                  Sign Up
                </button>
              </Button>
            </a>
          </Link>
          <Link
            to="/signin"
          >
            <a
              href="/signin"
              onClick={[Function]}
            >
              <Button
                classes=" cursor-pointer btn-white w-32 ml-2 text-purple-650 border hidden md:inline border-solid border-purple-650"
                name="Sign In"
                type="button"
              >
                <button
                  className="btn  cursor-pointer btn-white w-32 ml-2 text-purple-650 border hidden md:inline border-solid border-purple-650"
                  disabled={false}
                  type="button"
                >
                  Sign In
                </button>
              </Button>
            </a>
          </Link>
        </div>
      </nav>
    </NavBar>
  </Router>
</BrowserRouter>
`;

exports[`NavBar Component Should render without errors 1`] = `
<nav
  className="flex items-center justify-between flex-wrap bg-white-500 pt-2 p-3 z-40 shadow-md"
>
  <div
    className="flex items-center flex-shrink-0 text-dark mr-6"
  >
    <Link
      to="/"
    >
      <img
        alt="Author's Haven"
        className="w-3/12"
        id="logo"
        src="test-file-stub"
      />
    </Link>
  </div>
  <div
    className=""
  >
    <Link
      to="/signup"
    >
      <Button
        classes="btn-purple w-32 hidden md:inline"
        name="Sign Up"
        type="button"
      />
    </Link>
    <Link
      to="/signin"
    >
      <Button
        classes=" cursor-pointer btn-white w-32 ml-2 text-purple-650 border hidden md:inline border-solid border-purple-650"
        name="Sign In"
        type="button"
      />
    </Link>
  </div>
</nav>
`;
